<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view"
    >

    <group
        android:checkableBehavior="single"
        >

        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/notes"
            android:title="@string/Notes"/>

        <item
            android:id="@+id/new_note"
            android:icon="@drawable/add_note"
            android:title="@string/NewNote"/>

        <item
            android:id="@+id/nav_todo"
            android:icon="@drawable/task"
            android:title="@string/Todo"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/Settings"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/info"
            android:title="@string/AboutUs"/>
    </group>


</menu>