<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardMaxElevation="12dp"
    android:layout_margin="16dp"
    android:backgroundTint="@color/pinkish"
    android:id="@+id/cardview">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <!-- Title LinearLayout -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="24dp"
                android:textColor="@color/black"
                style="bold"/>

            <TextView
                android:id="@+id/texttitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:textColor="@color/black"
                style="bold"/>
        </LinearLayout>

        <!-- Description LinearLayout -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc"
                android:textSize="20dp"
                android:textColor="@color/black"
                style="bold"/>

            <TextView
                android:id="@+id/textdesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/black"
                style="bold"/>
        </LinearLayout>

        <!-- Date LinearLayout -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="17dp"
                android:textColor="@color/black"
                style="bold"/>

            <TextView
                android:id="@+id/textdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:textColor="@color/black"
                style="bold"/>
        </LinearLayout>

        <!-- Delete Button -->
        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@android:drawable/ic_menu_delete"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="deleteNote"
            android:layout_gravity="end"
            android:contentDescription="@string/delete_button_description"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>
